tests/good/fn_inplace.mu
fn five(mut ref a : int) {
    *a = 5
}

let mut x = 0

five(x)
