tests/bad/func_dup_arg.mu
fn f(x: int, x: int): int {
    5
}